# news-backend_school_lesson_code

./: CMakeLists.txt  README.md  index.js  load_test.py  main.cpp  version.h.in
include/: BAASExceptions.h  BAASUtil.h  sql_util.h
include/config/: BAASConfig.h
resource/: global_setting.json
resource/sql_util/: init.sql
src/: BAASLogger.cpp  BAASUtil.cpp  sql_util.cpp
src/config/: BAASConfig.cpp  BAASGlobalSetting.cpp
